adds OpenAPI spec and generator