@@ -1,5 +1,6 @@
 package com.wilterson;
 
+import com.wilterson.Pet.PetKindEnum;
 import java.util.Collections;
 import java.util.List;
 import org.springframework.graphql.data.method.annotation.QueryMapping;
@@ -15,9 +16,9 @@ public class PetsController {
         Person ownerGabriel = new Person("Gabriel", "647-706-9404");
         Person ownerSuellen = new Person("Suellen", "647-706-9404");
 
-        Pet dogSkol = new Pet("Skoll", "white", PetKind.DOG, null, List.of(ownerDaniel, ownerGabriel));
-        Pet dogLuna = new Pet("Luna", "cappuccino", PetKind.DOG, dogSkol, List.of(ownerDaniel, ownerGabriel));
-        Pet catSkipper = new Pet("Skipper", "black", PetKind.CAT, null, Collections.singletonList(ownerSuellen));
+        Pet dogSkol = new Pet("Skoll", "white", PetKindEnum.DOG, null, List.of(ownerDaniel, ownerGabriel));
+        Pet dogLuna = new Pet("Luna", "cappuccino", PetKindEnum.DOG, dogSkol, List.of(ownerDaniel, ownerGabriel));
+        Pet catSkipper = new Pet("Skipper", "black", PetKindEnum.CAT, null, Collections.singletonList(ownerSuellen));
 
         return List.of(
                 dogLuna,
